# ChangeLog for www-client/opera
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.770 2012/11/18 18:16:38 jer Exp $

  18 Nov 2012; Jeroen Roovers <jer@gentoo.org> -opera-12.11.1655.ebuild,
  -opera-12.11.1657.ebuild, -opera-12.11.1658.ebuild, -opera-12.11.1659.ebuild:
  Old.

*opera-12.11.1661 (16 Nov 2012)

  16 Nov 2012; Jeroen Roovers <jer@gentoo.org> +opera-12.11.1661.ebuild:
  http://my.opera.com/desktopteam/blog/2012/11/16/opera-12-11-rc2

*opera-12.11.1659 (16 Nov 2012)

  16 Nov 2012; Jeroen Roovers <jer@gentoo.org> +opera-12.11.1659.ebuild:
  http://my.opera.com/desktopteam/blog/2012/11/15/opera-12-11-rc1

*opera-12.11.1658 (14 Nov 2012)

  14 Nov 2012; Jeroen Roovers <jer@gentoo.org> +opera-12.11.1658.ebuild:
  http://my.opera.com/desktopteam/blog/2012/11/14/lets-make-a-snapshot

  13 Nov 2012; Jeroen Roovers <jer@gentoo.org> opera-12.10.1652.ebuild,
  opera-12.11.1655.ebuild, opera-12.11.1657.ebuild:
  Explain version/build slightly better.

*opera-12.11.1657 (13 Nov 2012)

  13 Nov 2012; Jeroen Roovers <jer@gentoo.org> -opera-12.11.1653.ebuild,
  +opera-12.11.1657.ebuild:
  http://my.opera.com/desktopteam/blog/2012/11/13/imperialentanglement

  12 Nov 2012; Jeroen Roovers <jer@gentoo.org> -opera-12.02.1578.ebuild:
  Old.

  13 Nov 2012; Andreas Schuerch <nativemad@gentoo.org> opera-12.10.1652.ebuild:
  x86 stable, see bug 442044

  09 Nov 2012; Jeroen Roovers <jer@gentoo.org> opera-12.10.1652.ebuild,
  opera-12.11.1653.ebuild, opera-12.11.1655.ebuild:
  Readd QA_PRESTRIPPED.

*opera-12.11.1655 (09 Nov 2012)

  09 Nov 2012; Jeroen Roovers <jer@gentoo.org> +opera-12.11.1655.ebuild:
  http://my.opera.com/desktopteam/blog/2012/11/09/important-crashfixes

  08 Nov 2012; Jeroen Roovers <jer@gentoo.org> opera-12.10.1652.ebuild,
  opera-12.11.1653.ebuild:
  Out with QA_PRESTRIPPED, in with QA_PREBUILT (bug #442090).

*opera-12.11.1653 (07 Nov 2012)
