@@ -8,14 +8,14 @@ DIST opera-12.11-1661.i386.freebsd.tar.xz 13472248 SHA256 de0675401defd2caa3b405
 DIST opera-12.11-1661.i386.linux.tar.xz 13552952 SHA256 735299d288c4cf55bfde50e02a685f8adb365494ec2566ca776741402d9ba22b SHA512 e051b37fccd1015ed82eff85d80c04a314ba51ec79f01d2503227f192489a31e292a1e81bb80c05b49035907b59be84cb2f0e99209c5c2ab50dcfc7373637f2b WHIRLPOOL 7b6482d7198d2f1fc5eab5770a3b481c4005fe6afb5800d840f21bbc174a23ff8184cd2b6172572171fbd692130c7f2d15b62d28aca184118485fe44b100e464
 DIST opera-12.11-1661.x86_64.linux.tar.xz 13634672 SHA256 773584d3fad92516f1d22a83607cf08e7d7f63a3d999378fa8356bd52669cade SHA512 df5d1194a598428c9ec348dc815081244115f469d8c684bec624a412d18695542447298f10692dd42a5f162040c965d89f2462705d7155d0dd22f6a8a35b5111 WHIRLPOOL b4d10ece15045a2117b9439be2c7dc8b8e2c638aef3516d99f901da78060c76453ff62e4754782a5ff35ddc7ad0650ce66999730625e9a79e2429ffa61770461
 EBUILD opera-12.10.1652.ebuild 5530 SHA256 c20598d66c8fa17c1caac68ad4bd2a3f7e7a28b809fa0345fd8edf25b79fa491 SHA512 f3a2d9aa19bab6aa03eac16da295a0f5df609839564329bcee07bc19fec8894b5412f4c3bc04f344841f06e1377e757ce73693aa18992c8f64b85c1e69cfd752 WHIRLPOOL c53fbe548c5ef1f07591d61f76a75643222d391ad11e63689eff063e8b6889db4f61ed7f00cd7727c51cc74cca844e8cd56a47286f8d2ceaaea3639519d410f7
-EBUILD opera-12.11.1661.ebuild 5539 SHA256 53603054f0033b22ff97bcd49fc0fddf598f2e5b14850613d0feb5f859ab5fb3 SHA512 de81958f9b26ab9124846cc3c7d43c69a4efeffca0f27499e8ca91bbbfcbf4f48c852bb6105638b10f23da602ec102e391ce1c2a1f8f99b258e630c904bc4321 WHIRLPOOL b1af50a16bfb4412ce50fe3a8f5d74c49e22b132fd92188cf2b9d47ac2362fb416ff2d51af7a7cf4a9738f9ceb0f27b13cfdef27f9ebce3ba9695a7a5493ab2d
-MISC ChangeLog 31702 SHA256 55b82667aa7c93d860c1bd4f2d93ecb263ae33b4a4a8b67544b04dd24d48ed1b SHA512 ceab05d0486c577ac221003a1cecbdbcae26106d1fa44ed548e141124ecfc9fc96e7d6ef123d3b10efc04f79c770cbdc0e856059d6dd92df59c91c53acbbe695 WHIRLPOOL d08ef0ec258a8d720bcb3f1b52478e3bec2cb48f9bd81c42fb7da8d9ad45fe7561e79cad18c9058acb6537fab92d8371322666d8d312251109603010e3458708
+EBUILD opera-12.11.1661.ebuild 5532 SHA256 96f1ff1a315febe9428e919f3c4992a77f80e92a1d003ac5744d118093ace395 SHA512 cb0ae1dfa2f2c44f94a1421d2005a204a3cc82d29f70e4adcc40600d28923a3ece477bc37bc9078b1bc081d314c3b6ae294c42fed76b99ccd91f6f38feb9637b WHIRLPOOL a0a2786a9d3599fde7d3d169322a7563d8403c612720115ccd5a3f67fbc27b7ee2037db0eee652d2172fee1a6a48bea5a82b493128d21b9389972053beeaf63c
+MISC ChangeLog 31803 SHA256 7f0a174acf7747390157067ab5ae0c7c5db7e40516e7815f7522bd2ba9d428bd SHA512 65bf02263924e98dd179b239b6ec73a90d2bb8a8f8449d68f92d6992adfebd6b200acef1bac66f5cfee83e28c54220f64ec766106d75490a5dd8df8fb7b42941 WHIRLPOOL 4497d41e8430a7ca2adc13d07146abe9561eea4534080ebc2829318fde47fc901398579c6d28d1de99cf6797fb6513a2fdedf06e73e9fdffc6a62086a361ab45
 MISC ChangeLog-2010 112299 SHA256 5c3b5c58119b4a6b1911d840892c42234f25dae57452287fb0a9e6cca78ed171 SHA512 9dc4dc7e7508bb1621c390837ec2e47d9e96075906b2060be419ee64e505c8f0da9e4d3a8bc7cc2de66c6efc383f026afb8fa5e886afa15da6349514a93c9edb WHIRLPOOL edaf1c2e810e91d37b2d90847640900374b447a12e2e0e927654966cc18c3a14f332ce6daa07c5a0049da06f5e89bfd0daddb5f73a4d79b334ded4397349cf7a
 MISC metadata.xml 672 SHA256 3fdb3d81bfb1c469bdf86811329eb4888ce909cce63d2aa71257b91a6f8f012e SHA512 4aae9fbf8a753b30b7ef5868b0084c1eb55ed34cc9e1ece8814db13230e07b455f45be936c810bc8a9426ce6c9eaa7449612ac50b47aad253dcae57a683b5b6a WHIRLPOOL 9dc490f6cffad6c3ff1beb27a74818fc66a194856b7d5a84972d387a6bcdf81cda95bb2d1f2b5cb9d58f47cf898bcede39b2a68fdaa5405c5efbffaa51986f3d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlCpJgcACgkQVWmRsqeSphONBQCeLzI3DlXteRlm2q+eAVtQDU8m
-5oMAnAzYLHs3HRukiFXjv7Xc/EUVgicC
-=EJ9G
+iEYEAREIAAYFAlCrjdEACgkQVWmRsqeSphNlcwCdGVsCN+zaB7XvgTuc9IER15cG
+OrQAn1wNiWx2hT3f0ejwBKUGYFlV7EDp
+=X6XW
 -----END PGP SIGNATURE-----
