@@ -1,6 +1,9 @@
 # ChangeLog for www-client/opera
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.770 2012/11/18 18:16:38 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.771 2012/11/20 14:03:59 jer Exp $
+
+  20 Nov 2012; Jeroen Roovers <jer@gentoo.org> opera-12.11.1661.ebuild:
+  Switch to mirror://opera.
 
   18 Nov 2012; Jeroen Roovers <jer@gentoo.org> -opera-12.11.1655.ebuild,
   -opera-12.11.1657.ebuild, -opera-12.11.1658.ebuild, -opera-12.11.1659.ebuild:
